[tool.poetry]
name = "sub-dom-scan"
version = "1.0"
description = "Scans output files from SubDomSpy scans to see what hosts respond to pings."
authors = ["Taylor-Jayde Blackstone <t.blackstone@inspyre.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
inspy-logger = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
